--- a/pom.xml
+++ b/pom.xml
@@ -27,7 +27,7 @@
 	</scm>
 
 
-	<developers>	
+	<developers>
 		<developer>
 			<name>Ludo Stellingwerff</name>
 			<id>ludo</id>
@@ -61,6 +61,7 @@
 		<junit.version>4.11</junit.version>
 		<java.version>1.7</java.version>
 		<eve.version>3.2.0-SNAPSHOT</eve.version>
+		<cors.version>2.5</cors.version>
 	</properties>
 
 	<dependencies>
@@ -74,6 +75,11 @@
 			<artifactId>junit</artifactId>
 			<version>${junit.version}</version>
 			<scope>test</scope>
+		</dependency>
+		<dependency>
+			<groupId>com.thetransactioncompany</groupId>
+			<artifactId>cors-filter</artifactId>
+			<version>${cors.version}</version>
 		</dependency>
 	</dependencies>
 
